# Distribution name (PyPI): 'cmon' is already taken by an unrelated project.
# The terminal command remains 'cmon' via [project.scripts] below.
[project]
name = "cmon-cli"
version = "0.1.2"
description = "Claude Monitor — tracks your Claude plan consumption over time"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Lucas Hideki", email = "lucas.hideki.07@gmail.com" }]
keywords = ["claude", "anthropic", "cli", "usage", "monitor", "quota", "duckdb", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.0",
    "orjson>=3.10",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "rich>=13.0",
]

# Plots are optional: matplotlib+seaborn are heavy and only the `plot` command
# uses them. Default `uv sync` stays lean; for plots: `uv sync --extra plot`.
[project.optional-dependencies]
plot = ["matplotlib>=3.8", "seaborn>=0.13"]

[project.scripts]
cmon = "cmon:main"

[project.urls]
Homepage = "https://github.com/LkHideki/cmon"
Repository = "https://github.com/LkHideki/cmon"
Issues = "https://github.com/LkHideki/cmon/issues"

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.hatch.build.targets.wheel]
only-include = ["cmon.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
